--- a/PaymentApp/src/app/app.component.html
+++ b/PaymentApp/src/app/app.component.html
@@ -1,4 +1,3 @@
 <div class="container">
-  <app-payment-details-form></app-payment-details-form>
-  <!-- <app-payment-details></app-payment-details> -->
+  <app-payment-details></app-payment-details>
 </div>
