--- a/PaymentApp2/src/app/payment-details/payment-details.component.html
+++ b/PaymentApp2/src/app/payment-details/payment-details.component.html
@@ -1,2 +1,5 @@
 <p>payment-details works!</p>
+<div class="jumbtron jumbotron-fluid py-3">
+    <h1 class="display-4 text-center">Payment detail register</h1>
+</div>
 <app-payment-details-form></app-payment-details-form>
