--- a/PaymentApp2/src/app/payment-details/payment-details-form/payment-details-form.component.html
+++ b/PaymentApp2/src/app/payment-details/payment-details-form/payment-details-form.component.html
@@ -1,11 +1,44 @@
 <form>
-    <!-- <input type="hidden" name="paymentDetailId" [value]="service.formData.paymentDetailId" /> -->
-    <div class="form-group">
-        <label>CARD OWNER NAME</label>
-        <!-- <input class="form-control form-control-lg" placeholder="Full Name" 
-        name="cardOwnerName" #cardOwnerName="ngModel" [(ngModel)]="service.formData.cardOwnerName" > -->
-        <!-- <input class="form-control form-control-lg"
-        name="password" #cardOwnerName="ngModel" [(ngModel)]="cardOwnerName" /> -->
-        <!-- <input type="text" class="form-control" id="name"  required  [(ngModel)]="data.name" /> -->
-    </div>
+    <input type="hidden" name="paymentDetailId" [value]="service.formData.paymentDetailId" [value]="service.formData.paymentDetailId"/>
+        <!-- <div class="form-group">
+            <label>CARD OWNER NAME</label>
+            <h1>Hello angular!</h1>
+            <input class="form-control form-control-lg" placeholder="Full Name" 
+            name="cardOwnerName" #cardOwnerName="ngModel" [(ngModel)]="service.formData.cardOwnerName" >
+
+            <input class="form-control form-control-lg" placeholder="Full Name" 
+            name="cardOwnerName" #cardOwnerName="ngModel" [(ngModel)]="service.formData.cardOwnerName" >
+        </div> -->
+        <div class="form-group">
+            <label>CARD OWNER NAME</label>
+            <input class="form-control form-control-lg" placeholder="Full Name" name="cardOwnerName"
+                #cardOwnerName="ngModel" [(ngModel)]="service.formData.cardOwnerName"
+                required [class.invalid]="cardOwnerName.invalid && cardOwnerName.touched">
+        </div>
+        <div class="form-group">
+            <label>CARD NUMBER</label>
+            <input class="form-control form-control-lg" placeholder="16 Digit Card Number" name="cardNumber"
+                #cardNumber="ngModel" [(ngModel)]="service.formData.cardNumber"
+                required maxlength="16" minlength="16" [class.invalid]="cardNumber.invalid && cardNumber.touched">
+        </div>
+        <div class="form-row">
+            <div class="form-group  col-md-4">
+                <label>SECURITY CODE</label>
+                <input type="password" class="form-control form-control-lg" placeholder="Security Code" name="securityCode"
+                    #securityCode="ngModel" [(ngModel)]="service.formData.securityCode"
+                    required maxlength="3" minlength="3" [class.invalid]="securityCode.invalid && securityCode.touched">
+            </div>
+            <div class="form-group  col-md-4">
+                <label>VALIDE THROUGH</label>
+                <input class="form-control form-control-lg" placeholder="MM/YY" name="expirationDate"
+                    #expirationDate="ngModel" [(ngModel)]="service.formData.expirationDate"
+                    required maxlength="5" minlength="5" [class.invalid]="expirationDate.invalid && expirationDate.touched">
+            </div>
+        </div>
+        <!-- <div class="form-group">
+            <form #loginForm="ngForm">
+                <input type="text" required> 
+                <button  type="submit"  [disabled]="loginForm.form.invalid">Submit</button>
+            </form>
+        </div> -->
 </form>
